output/lastYearGrammarParser.java
// $ANTLR null /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g 2018-01-26 16:23:17

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class lastYearGrammarParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLOPER", "COMMENT", "ClassStat", 
		"DoExpr", "DoStat", "EndStat", "FiStat", "ForStat", "IDF", "IDFMAJ", "INT", 
		"INTTYPE", "IfStat", "InStat", "InheritStat", "Inner", "MethodStat", "NewStat", 
		"ReadStat", "ReturnStat", "STRING", "STRINGTYPE", "SuperStat", "ThenStat", 
		"ThisStat", "VarStat", "Void", "WS", "WriteStat", "'('", "')'", "'*'", 
		"'+'", "','", "'-'", "'.'", "'..'", "'/'", "':'", "':='", "';'", "'='", 
		"'else'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int BOOLOPER=4;
	public static final int COMMENT=5;
	public static final int ClassStat=6;
	public static final int DoExpr=7;
	public static final int DoStat=8;
	public static final int EndStat=9;
	public static final int FiStat=10;
	public static final int ForStat=11;
	public static final int IDF=12;
	public static final int IDFMAJ=13;
	public static final int INT=14;
	public static final int INTTYPE=15;
	public static final int IfStat=16;
	public static final int InStat=17;
	public static final int InheritStat=18;
	public static final int Inner=19;
	public static final int MethodStat=20;
	public static final int NewStat=21;
	public static final int ReadStat=22;
	public static final int ReturnStat=23;
	public static final int STRING=24;
	public static final int STRINGTYPE=25;
	public static final int SuperStat=26;
	public static final int ThenStat=27;
	public static final int ThisStat=28;
	public static final int VarStat=29;
	public static final int Void=30;
	public static final int WS=31;
	public static final int WriteStat=32;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "mOINEXPR", "eXPRESSION2", "sUITE", "pROGRAM", "bOOLEXPR", 
		"nOTMOINSEXPR", "mETHOD_DECL", "iNSTRUCTION", "mETHOD_ARGS", "mULTEXPR", 
		"p", "mETHOD_TYPE", "vAR_DECL", "pRINT", "rETURN2", "aTOMBIS", "aDDEXPR", 
		"cLASS_DECL", "eXPRESSION", "rEAD", "cLASS_ITEM_DECL", "tYPE", "aTOM"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public lastYearGrammarParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public lastYearGrammarParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public lastYearGrammarParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return lastYearGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g"; }


	public static class p_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "p"
	// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:16:1: p : pROGRAM EOF -> pROGRAM ;
	public final lastYearGrammarParser.p_return p() throws RecognitionException {
		lastYearGrammarParser.p_return retval = new lastYearGrammarParser.p_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope pROGRAM1 =null;

		CommonTree EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_pROGRAM=new RewriteRuleSubtreeStream(adaptor,"rule pROGRAM");

		try { dbg.enterRule(getGrammarFileName(), "p");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(16, 0);

		try {
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:16:5: ( pROGRAM EOF -> pROGRAM )
			dbg.enterAlt(1);

			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:16:7: pROGRAM EOF
			{
			dbg.location(16,7);
			pushFollow(FOLLOW_pROGRAM_in_p72);
			pROGRAM1=pROGRAM();
			state._fsp--;

			stream_pROGRAM.add(pROGRAM1.getTree());dbg.location(16,15);
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_p74);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: pROGRAM
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 16:19: -> pROGRAM
			{
				dbg.location(16,22);
				adaptor.addChild(root_0, stream_pROGRAM.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(17, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "p");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "p"


	public static class pROGRAM_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "pROGRAM"
	// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:1: pROGRAM : ( cLASS_DECL )* ( vAR_DECL )* ( iNSTRUCTION )+ ;
	public final lastYearGrammarParser.pROGRAM_return pROGRAM() throws RecognitionException {
		lastYearGrammarParser.pROGRAM_return retval = new lastYearGrammarParser.pROGRAM_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope cLASS_DECL3 =null;
		ParserRuleReturnScope vAR_DECL4 =null;
		ParserRuleReturnScope iNSTRUCTION5 =null;


		try { dbg.enterRule(getGrammarFileName(), "pROGRAM");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:11: ( ( cLASS_DECL )* ( vAR_DECL )* ( iNSTRUCTION )+ )
			dbg.enterAlt(1);

			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:13: ( cLASS_DECL )* ( vAR_DECL )* ( iNSTRUCTION )+
			{
			root_0 = (CommonTree)adaptor.nil();


			dbg.location(19,13);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:13: ( cLASS_DECL )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==ClassStat) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:13: cLASS_DECL
					{
					dbg.location(19,13);
					pushFollow(FOLLOW_cLASS_DECL_in_pROGRAM89);
					cLASS_DECL3=cLASS_DECL();
					state._fsp--;

					adaptor.addChild(root_0, cLASS_DECL3.getTree());

					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(19,25);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:25: ( vAR_DECL )*
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==VarStat) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:25: vAR_DECL
					{
					dbg.location(19,25);
					pushFollow(FOLLOW_vAR_DECL_in_pROGRAM92);
					vAR_DECL4=vAR_DECL();
					state._fsp--;

					adaptor.addChild(root_0, vAR_DECL4.getTree());

					}
					break;

				default :
					break loop2;
				}
			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(19,35);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:35: ( iNSTRUCTION )+
			int cnt3=0;
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==DoStat||(LA3_0 >= ForStat && LA3_0 <= IDF)||LA3_0==IfStat||(LA3_0 >= ReadStat && LA3_0 <= ReturnStat)||LA3_0==WriteStat||LA3_0==47) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:19:35: iNSTRUCTION
					{
					dbg.location(19,35);
					pushFollow(FOLLOW_iNSTRUCTION_in_pROGRAM95);
					iNSTRUCTION5=iNSTRUCTION();
					state._fsp--;

					adaptor.addChild(root_0, iNSTRUCTION5.getTree());

					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt3++;
			}
			} finally {dbg.exitSubRule(3);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(20, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "pROGRAM");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "pROGRAM"


	public static class cLASS_DECL_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "cLASS_DECL"
	// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:1: cLASS_DECL : ( ClassStat IDFMAJ ( InheritStat IDFMAJ )? '=' ) '(' cLASS_ITEM_DECL ')' -> ^( ClassStat IDFMAJ ( ^( InheritStat IDFMAJ ) )? ( cLASS_ITEM_DECL )? ) ;
	public final lastYearGrammarParser.cLASS_DECL_return cLASS_DECL() throws RecognitionException {
		lastYearGrammarParser.cLASS_DECL_return retval = new lastYearGrammarParser.cLASS_DECL_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ClassStat6=null;
		Token IDFMAJ7=null;
		Token InheritStat8=null;
		Token IDFMAJ9=null;
		Token char_literal10=null;
		Token char_literal11=null;
		Token char_literal13=null;
		ParserRuleReturnScope cLASS_ITEM_DECL12 =null;

		CommonTree ClassStat6_tree=null;
		CommonTree IDFMAJ7_tree=null;
		CommonTree InheritStat8_tree=null;
		CommonTree IDFMAJ9_tree=null;
		CommonTree char_literal10_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree char_literal13_tree=null;
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_ClassStat=new RewriteRuleTokenStream(adaptor,"token ClassStat");
		RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
		RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
		RewriteRuleTokenStream stream_InheritStat=new RewriteRuleTokenStream(adaptor,"token InheritStat");
		RewriteRuleTokenStream stream_IDFMAJ=new RewriteRuleTokenStream(adaptor,"token IDFMAJ");
		RewriteRuleSubtreeStream stream_cLASS_ITEM_DECL=new RewriteRuleSubtreeStream(adaptor,"rule cLASS_ITEM_DECL");

		try { dbg.enterRule(getGrammarFileName(), "cLASS_DECL");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(22, 0);

		try {
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:14: ( ( ClassStat IDFMAJ ( InheritStat IDFMAJ )? '=' ) '(' cLASS_ITEM_DECL ')' -> ^( ClassStat IDFMAJ ( ^( InheritStat IDFMAJ ) )? ( cLASS_ITEM_DECL )? ) )
			dbg.enterAlt(1);

			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:16: ( ClassStat IDFMAJ ( InheritStat IDFMAJ )? '=' ) '(' cLASS_ITEM_DECL ')'
			{
			dbg.location(22,16);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:16: ( ClassStat IDFMAJ ( InheritStat IDFMAJ )? '=' )
			dbg.enterAlt(1);

			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:17: ClassStat IDFMAJ ( InheritStat IDFMAJ )? '='
			{
			dbg.location(22,17);
			ClassStat6=(Token)match(input,ClassStat,FOLLOW_ClassStat_in_cLASS_DECL108);  
			stream_ClassStat.add(ClassStat6);
			dbg.location(22,27);
			IDFMAJ7=(Token)match(input,IDFMAJ,FOLLOW_IDFMAJ_in_cLASS_DECL110);  
			stream_IDFMAJ.add(IDFMAJ7);
			dbg.location(22,34);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:34: ( InheritStat IDFMAJ )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==InheritStat) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:35: InheritStat IDFMAJ
					{
					dbg.location(22,35);
					InheritStat8=(Token)match(input,InheritStat,FOLLOW_InheritStat_in_cLASS_DECL113);  
					stream_InheritStat.add(InheritStat8);
					dbg.location(22,47);
					IDFMAJ9=(Token)match(input,IDFMAJ,FOLLOW_IDFMAJ_in_cLASS_DECL115);  
					stream_IDFMAJ.add(IDFMAJ9);

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(22,56);
			char_literal10=(Token)match(input,45,FOLLOW_45_in_cLASS_DECL119);  
			stream_45.add(char_literal10);

			}
			dbg.location(22,61);
			char_literal11=(Token)match(input,33,FOLLOW_33_in_cLASS_DECL122);  
			stream_33.add(char_literal11);
			dbg.location(22,65);
			pushFollow(FOLLOW_cLASS_ITEM_DECL_in_cLASS_DECL124);
			cLASS_ITEM_DECL12=cLASS_ITEM_DECL();
			state._fsp--;

			stream_cLASS_ITEM_DECL.add(cLASS_ITEM_DECL12.getTree());dbg.location(22,81);
			char_literal13=(Token)match(input,34,FOLLOW_34_in_cLASS_DECL126);  
			stream_34.add(char_literal13);

			// AST REWRITE
			// elements: IDFMAJ, ClassStat, InheritStat, cLASS_ITEM_DECL, IDFMAJ
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 22:85: -> ^( ClassStat IDFMAJ ( ^( InheritStat IDFMAJ ) )? ( cLASS_ITEM_DECL )? )
			{
				dbg.location(22,88);
				// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:88: ^( ClassStat IDFMAJ ( ^( InheritStat IDFMAJ ) )? ( cLASS_ITEM_DECL )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(22,90);
				root_1 = (CommonTree)adaptor.becomeRoot(stream_ClassStat.nextNode(), root_1);
				dbg.location(22,100);
				adaptor.addChild(root_1, stream_IDFMAJ.nextNode());dbg.location(22,107);
				// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:107: ( ^( InheritStat IDFMAJ ) )?
				if ( stream_InheritStat.hasNext()||stream_IDFMAJ.hasNext() ) {
					dbg.location(22,107);
					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:107: ^( InheritStat IDFMAJ )
					{
					CommonTree root_2 = (CommonTree)adaptor.nil();
					dbg.location(22,109);
					root_2 = (CommonTree)adaptor.becomeRoot(stream_InheritStat.nextNode(), root_2);
					dbg.location(22,121);
					adaptor.addChild(root_2, stream_IDFMAJ.nextNode());
					adaptor.addChild(root_1, root_2);
					}

				}
				stream_InheritStat.reset();
				stream_IDFMAJ.reset();
				dbg.location(22,130);
				// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:22:130: ( cLASS_ITEM_DECL )?
				if ( stream_cLASS_ITEM_DECL.hasNext() ) {
					dbg.location(22,130);
					adaptor.addChild(root_1, stream_cLASS_ITEM_DECL.nextTree());
				}
				stream_cLASS_ITEM_DECL.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(23, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "cLASS_DECL");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "cLASS_DECL"


	public static class cLASS_ITEM_DECL_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "cLASS_ITEM_DECL"
	// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:1: cLASS_ITEM_DECL : ( vAR_DECL )* ( mETHOD_DECL )* ;
	public final lastYearGrammarParser.cLASS_ITEM_DECL_return cLASS_ITEM_DECL() throws RecognitionException {
		lastYearGrammarParser.cLASS_ITEM_DECL_return retval = new lastYearGrammarParser.cLASS_ITEM_DECL_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope vAR_DECL14 =null;
		ParserRuleReturnScope mETHOD_DECL15 =null;


		try { dbg.enterRule(getGrammarFileName(), "cLASS_ITEM_DECL");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(31, 0);

		try {
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:18: ( ( vAR_DECL )* ( mETHOD_DECL )* )
			dbg.enterAlt(1);

			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:20: ( vAR_DECL )* ( mETHOD_DECL )*
			{
			root_0 = (CommonTree)adaptor.nil();


			dbg.location(31,20);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:20: ( vAR_DECL )*
			try { dbg.enterSubRule(5);

			loop5:
			while (true) {
				int alt5=2;
				try { dbg.enterDecision(5, decisionCanBacktrack[5]);

				int LA5_0 = input.LA(1);
				if ( (LA5_0==VarStat) ) {
					alt5=1;
				}

				} finally {dbg.exitDecision(5);}

				switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:20: vAR_DECL
					{
					dbg.location(31,20);
					pushFollow(FOLLOW_vAR_DECL_in_cLASS_ITEM_DECL179);
					vAR_DECL14=vAR_DECL();
					state._fsp--;

					adaptor.addChild(root_0, vAR_DECL14.getTree());

					}
					break;

				default :
					break loop5;
				}
			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(31,30);
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:30: ( mETHOD_DECL )*
			try { dbg.enterSubRule(6);

			loop6:
			while (true) {
				int alt6=2;
				try { dbg.enterDecision(6, decisionCanBacktrack[6]);

				int LA6_0 = input.LA(1);
				if ( (LA6_0==MethodStat) ) {
					alt6=1;
				}

				} finally {dbg.exitDecision(6);}

				switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:31:30: mETHOD_DECL
					{
					dbg.location(31,30);
					pushFollow(FOLLOW_mETHOD_DECL_in_cLASS_ITEM_DECL182);
					mETHOD_DECL15=mETHOD_DECL();
					state._fsp--;

					adaptor.addChild(root_0, mETHOD_DECL15.getTree());

					}
					break;

				default :
					break loop6;
				}
			}
			} finally {dbg.exitSubRule(6);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "cLASS_ITEM_DECL");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "cLASS_ITEM_DECL"


	public static class vAR_DECL_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "vAR_DECL"
	// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:34:1: vAR_DECL : VarStat IDF ':' tYPE ';' -> ^( VarStat IDF tYPE ) ;
	public final lastYearGrammarParser.vAR_DECL_return vAR_DECL() throws RecognitionException {
		lastYearGrammarParser.vAR_DECL_return retval = new lastYearGrammarParser.vAR_DECL_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token VarStat16=null;
		Token IDF17=null;
		Token char_literal18=null;
		Token char_literal20=null;
		ParserRuleReturnScope tYPE19 =null;

		CommonTree VarStat16_tree=null;
		CommonTree IDF17_tree=null;
		CommonTree char_literal18_tree=null;
		CommonTree char_literal20_tree=null;
		RewriteRuleTokenStream stream_VarStat=new RewriteRuleTokenStream(adaptor,"token VarStat");
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleSubtreeStream stream_tYPE=new RewriteRuleSubtreeStream(adaptor,"rule tYPE");

		try { dbg.enterRule(getGrammarFileName(), "vAR_DECL");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(34, 0);

		try {
			// /home/etudiants/raimondi3u/CompilTest/lastYearGrammar.g:34:12: ( VarStat IDF ':' tYPE ';' -> ^( VarStat IDF tYPE ) )
			dbg.enterAlt(1);
